# character-generator

./: .gitignore  README.md
character_gui/: .pre-commit-config.yaml  character_generator.py  environment.py  extra_types.py  pyproject.toml  requirements.txt
character_gui/local_characters/template/: template.json
character_gui/src/uscm_character_generator/: __init__.py  character_generator.py
uscm_character_generator/: .flake8  .pre-commit-config.yaml
uscm_character_generator/src/uscm_character_generator/: character_generator.py  utils.py
